实现流水线的拆分器方法